--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 ipython==7.34.0
 notebook==6.5.5
 ipywidgets==7.7.1
+jupyter_core==5.7.2
+jupyter-client==6.1.12
+jupyter-server==1.24.0
+jupyterlab_widgets==3.0.13
